Fix CSS for HTML5: right align code line numbers.
It's a compromise: only numbers up to 99 are right aligned
to keep the reserved space small.

git-svn-id: http://svn.code.sf.net/p/docutils/code/trunk@9902 929543f6-e4f2-0310-98a6-ba3bd3dd1d04

--- a/docutils/docutils/writers/html5_polyglot/minimal.css
+++ b/docutils/docutils/writers/html5_polyglot/minimal.css
@@ -235,10 +235,14 @@ table.align-left, table.align-center, table.align-right {
 div.line-block { display: block; }
 div.line-block div.line-block, pre { margin-left: 2em; }
 
-/* Code line numbers: dropped when copying text from the page */
+/* Code line numbers: align-right, don't copy with drag-and-drop */
 pre.code .ln { display: none; }
 pre.code code:before {
-  content: attr(data-lineno); /* …, none) fallback not supported by any browser */
+  content: attr(data-lineno);
+  display: inline-block;
+  min-width: 1.8em;
+  text-align: right;
+  font-size: small;
   color: gray;
 }
 
